# rinha-backend

./: .gitignore  README.md  commands  docker-compose.yml
.github/workflows/: docker-publish.yml
api/: Cargo.toml  Dockerfile
api/.cargo/: config.toml
api/.sqlx/: query-01b0225e7293c341c116ff52cfeebacb9591dbb20739998a7c70a133184d7913.json  query-04584b0b7d6ec96737f5c2fbf8e888bfc9412b999954ec7a9624e1af94cf2531.json  query-52584f44057b4ba7a296d60e47ec5c74e10768c9b16bcfd1529e72c44b1b2215.json  query-7d8dc05188dfd93d4ac110f161df1bfa8ce97df7cd40da19f86c45c039aa6dd9.json
api/src/: db.rs  main.rs  models.rs
config/migrations/: 01_person_table.sql
