[package]
name = "rinha-vimsos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "uuid", "macros" ] }
serde = "1"
serde_json = "1"
axum = { version="0.6", features = ["headers"] }
once_cell = "1"
uuid = { version = "1", features = ["serde", "v7"] }
smallvec = { version = "1", features = ["serde"] }
compact_str = { version = "0.7", features = ["serde"] }
log = "0.4"
simplelog = { version = "0.12", features = ["termcolor"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
